# wh

./: .gitignore  AGENTS.md  PLAN.md  README.md  Readme.md  VISION.md  bootstrap.ps1  build.ps1  run.ps1  seed.ps1  test.ps1
.github/workflows/: ci.yml
docs/: GUIDANCE.md  VISION.md  open-whispr-notes.md  windows-dictation-research.md
engine/: CMakeLists.txt  engine.cpp
native/src/: wh.c  wh.cpp
scripts/: bootstrap.ps1  build.ps1  clean-toolchain.ps1  hotkey-helper.ps1
tools/TextSink/: Program.cs  TextSink.csproj
ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  wh.csproj
ui/Services/: AudioService.cs  EngineService.cs  HotkeyService.cs  ModelManager.cs
ui/WH/: App.xaml  App.xaml.cs  Args.cs  Logging.cs  MainWindow.xaml  MainWindow.xaml.cs  ModelManager.cs  Native.cs  NativeBootstrap.cs  TextInjection.cs  Tray.cs  WH.csproj  WavFinder.cs
